--- a/index.html
+++ b/index.html
@@ -288,6 +288,9 @@
         <p>Интерьер Студия была основана в 1993 году и стала на местном и национальном уровне признанной ведущей фирмой по дизайну интерьера. Инновационные технологии, индивидуальная планировка интерьера и безупречный сервис позволили нам стремительно расти к успеху и поддерживать сильную и лояльную клиентуру.</p>
       </div>
       <h3 class="popup__subtitle">Контакты</h3>
+	  <div class="popup__text">
+        <p>Интерьер Студия была основана в 1993 году и стала на местном и национальном уровне признанной ведущей фирмой по дизайну интерьера. Инновационные технологии, индивидуальная планировка интерьера и безупречный сервис позволили нам стремительно расти к успеху и поддерживать сильную и лояльную клиентуру.</p>
+      </div>
     </div><!--end popup__item-->
   </div>
  </div>
