--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
        </a>
      </div>
      <div class="main-footer__desc">
-       <p>Любое копирование с сайта без обратной ссылки запрещено. разработано <a href="https://webworks.com.ua/">webworks.com.ua</a></p>
+       <p>Любое копирование с сайта без обратной ссылки запрещено</a></p>
      </div>
    </div>
  </footer>
